[tool.poetry]
name = "zemfrog-quasar"
version = "1.0.2"
description = "Quasar Framework Integration"
authors = ["Aprila Hijriyan <hijriyan23@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["zemfrog"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Framework :: Flask",
    # "Framework :: Zemfrog",
]

[tool.poetry.dependencies]
python = "^3.7"
zemfrog-theme = "^1.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.0"
zemfrog = "^5.0.1"

[tool.poetry.urls]

Github = "https://github.com/zemfrog/zemfrog-quasar"
"Issue Tracker" = "https://github.com/zemfrog/zemfrog-quasar/issues"
Donation = "https://www.patreon.com/aprilahijriyan"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
